@@ -58,7 +58,7 @@ Since May 2003 VSTGUI is open source and hosted at sourceforge.
 
 Currently VSTGUI compiles on
 \par Microsoft Windows (with Visual Studio and Windows 7 Platform SDK)
-- XP (32 and 64 bit)
+- XP SP 2 (32 and 64 bit)
 - Vista (32 and 64 bit)
 - 7 (32 and 64 bit)
 \par Apple Mac OS X (with gcc 4.0 or gcc 4.2)
