@@ -86,11 +86,11 @@ GdiPlusFont::GdiPlusFont (const char* name, const CCoord& size, const int32_t& s
 {
 	gdiStyle = Gdiplus::FontStyleRegular;
 	if (style & kBoldFace)
-		gdiStyle = Gdiplus::FontStyleBold;
+		gdiStyle |= Gdiplus::FontStyleBold;
 	if (style & kItalicFace)
-		gdiStyle = Gdiplus::FontStyleItalic;
+		gdiStyle |= Gdiplus::FontStyleItalic;
 	if (style & kUnderlineFace)
-		gdiStyle = Gdiplus::FontStyleUnderline;
+		gdiStyle |= Gdiplus::FontStyleUnderline;
 
 	WCHAR tempName [200];
 	mbstowcs (tempName, name, 200);
